--- a/Components/Pages/Projects/ProjectPage.razor.css
+++ b/Components/Pages/Projects/ProjectPage.razor.css
@@ -10,3 +10,39 @@
     border-radius: 3px;
     padding: 2px 5px;
 }
+.kanban-card {
+    position: relative;
+    padding-bottom: 8px !important;
+}
+
+.card-header {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 4px 4px 2px 14px;
+    margin-bottom: 2px;
+}
+
+.card-content {
+    font-size: 14px;
+    line-height: 1.5;
+    padding: 2px 14px 6px 14px;
+}
+
+.card-actions {
+    position: absolute;
+    bottom: 4px;
+    right: 5px;
+}
+
+.delete-button {
+    background: none;
+    border: none;
+    color: #393939;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 4px;
+}
+
+.delete-button:hover {
+    color: #ff0000;
+}
